--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/banking_system?serverTimezone=UTC
+spring.datasource.username=ironhacker
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.show-sql=true
+server.error.include-stacktrace=never
