--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.jpa.hibernate.ddl-auto=validate
 
 spring.jpa.show-sql=true
 server.error.include-stacktrace=never
+
+
+flyway.user=ironhacker
+flyway.password=123456
+flyway.schemas=banking_system
+flyway.url=jdbc:mysql://localhost:3306
+spring.flyway.baseline-on-migrate = true
+
