--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.show-sql=true
 server.error.include-stacktrace=never
+
+spring.flyway.enabled=false
